feat: switch from zip to 7z for output compression and add p7zip installation

--- a/cog.yaml
+++ b/cog.yaml
@@ -73,6 +73,7 @@ build:
   run:
     - pip install --upgrade pip
     - apt-get update && apt-get install -y ffmpeg
+    - apt-get install p7zip-full
     - pip install imageio[ffmpeg]
     - pip install torch==2.1.1+cu118 torchvision==0.16.1+cu118 torchaudio==2.1.1+cu118 -f https://download.pytorch.org/whl/torch_stable.html
     - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.0.6/pget" && chmod +x /usr/local/bin/pget
