--- a/cog.yaml
+++ b/cog.yaml
@@ -68,6 +68,7 @@ build:
     - "ffmpy==0.3.1"
     - "python-dotenv>=1.0.0"
     - "av==11.0.0"
+    - "clearvoice>=0.1.2"
 
   # commands run after the environment is setup
   run:
